# Inventory_management

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
agent/: intent_classifier.py  llm_client.py  local_text_to_sql.py  memory.py  react_agent.py  text_to_sql.py
data/: generate_inventory.py  generate_query_dataset.py  generate_semantic_dataset.py  generate_tool_calling_dataset.py
db/: __init__.py  database.py  schema.sql
finetune/: colab_finetune.ipynb  explaination_artifacts.txt  export_domain_adaptation.py  export_text_to_sql.py  export_tool_calling.py
tests/: test_agent.py  test_data_gen.py  test_tools.py
tools/: __init__.py  check_stock.py  generate_report.py  run_sql_query.py  tool_registry.py  update_inventory.py
vector_db/: __init__.py  embedder.py  retriever.py
